 cnp-nist-cm-7-1-least-func-periodic-review-dyxq4wg.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: "cnp-nist-cm-7-1-least-func-periodic-review"-8dbp2h6
  namespace: kube-system
spec:
  description: "Prohibit or restrict the use of the default ports open in containers."
  endpointSelector:
    matchLabels:
      controller-revision-hash: 7b445dc7b4
      k8s-app: cilium
      pod-template-generation: 1
